--- a/NotfisUpload/Views/Home/Index.cshtml
+++ b/NotfisUpload/Views/Home/Index.cshtml
@@ -1,46 +1,31 @@
-﻿<br />
-<br />
-<div class="panel panel-default">
-    <div class="panel-body">
-        <form class="form" method="get">
-            <div class="row">
-                <div class="col-sm-5 col-xs-12">
-                    <input type="text" class="form-control input-sm" placeholder="Pesquise por chaveNFE" id="ChaveNFE" name="ChaveNfe">
-                </div>
-                <div class="col-sm-3 col-xs-12">
-                    <label class="sr-only">Nro. NF</label>
-                    <input type="text" class="form-control input-sm" placeholder="Pesquise por Pedido" id="Pedido" name="Pedido">
-                </div>
-                <div class="col-sm-3 col-xs-12">
-                    <input type="submit" class="btn btn-info btn-sm btn-block" value="Filtrar">
-                </div>
-            </div>
-            <table class="table table-striped">
-                <thead>
-                    <tr>
-                        <th style="width: 30px;">#</th>
-                        <th style="width: 30px;">#</th>
-                        <th style="width: 200px;">Nome</th>
-                        <th style="width: 250px;">CNPJ</th>
-                        <th style="width: 100px;">Situação</th>
-                        <th style="width: 150px;">Inclusão</th>
-                        <th style="width: 30px;">Tipo</th>
-                    </tr>
-                </thead>
-                <tbody>
-                    <tr>
-                        <td>2</td>
-                        <td>[CGH] SARAIVA</td>
-                        <td>61365284017007</td>
-                        <td>Ativo</td>
-                        <td>17/08/2021</td>
-                        <td>Integração EDI</td>
-                        <td>Integração EDI</td>
-                    </tr>
-                </tbody>
-            </table>
+﻿@{
+    ViewBag.Title = "Home Page";
+}
 
-        </form>
+<div class="jumbotron">
+    <h1>ASP.NET</h1>
+    <p class="lead">ASP.NET is a free web framework for building great Web sites and Web applications using HTML, CSS and JavaScript.</p>
+    <p><a href="https://asp.net" class="btn btn-primary btn-lg">Learn more &raquo;</a></p>
+</div>
+
+<div class="row">
+    <div class="col-md-4">
+        <h2>Getting started</h2>
+        <p>
+            ASP.NET MVC gives you a powerful, patterns-based way to build dynamic websites that
+            enables a clean separation of concerns and gives you full control over markup
+            for enjoyable, agile development.
+        </p>
+        <p><a class="btn btn-default" href="https://go.microsoft.com/fwlink/?LinkId=301865">Learn more &raquo;</a></p>
+    </div>
+    <div class="col-md-4">
+        <h2>Get more libraries</h2>
+        <p>NuGet is a free Visual Studio extension that makes it easy to add, remove, and update libraries and tools in Visual Studio projects.</p>
+        <p><a class="btn btn-default" href="https://go.microsoft.com/fwlink/?LinkId=301866">Learn more &raquo;</a></p>
+    </div>
+    <div class="col-md-4">
+        <h2>Web Hosting</h2>
+        <p>You can easily find a web hosting company that offers the right mix of features and price for your applications.</p>
+        <p><a class="btn btn-default" href="https://go.microsoft.com/fwlink/?LinkId=301867">Learn more &raquo;</a></p>
     </div>
 </div>
-<!-- Grid -->
