--- a/NotfisUpload/Views/Shared/_Layout.cshtml
+++ b/NotfisUpload/Views/Shared/_Layout.cshtml
@@ -22,10 +22,10 @@
                             <a class="nav-link text-dark" asp-area="" asp-controller="SalvarUpload" asp-action="Index">Integração</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link text-dark" asp-area="" asp-controller="Home" asp-action="Integracao">Monitoramento</a>
+                            <a class="nav-link text-dark" asp-area="" asp-controller="Home" asp-action="Monitoramento">Monitoramento</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link text-dark" asp-area="" asp-controller="Home" asp-action="Integracao">Integração</a>
+                            <a class="nav-link text-dark" asp-area="" asp-controller="Home" asp-action="Informacao">Informação</a>
                         </li>
                     </ul>
                 </div>
