--- a/NotfisUpload/Views/Login/RegistrarLogin.cshtml
+++ b/NotfisUpload/Views/Login/RegistrarLogin.cshtml
@@ -1,4 +1,4 @@
-﻿
+﻿@model NotfisUpload.Entidade.Conta
 @{
     ViewBag.Title = "Index";
 }
@@ -7,7 +7,7 @@
 <h3>Entre com seu Login</h3>
 
 
-<form action="/Login/ChecarLogin" method="post">
+<form action="/Login/RegistrarLogin" method="post">
 
     <div class="row">
         <div class="col-sm-4 col-sm-offset-4 text-left">
@@ -19,7 +19,7 @@
     <div class="row">
         <div class="col-sm-4 col-sm-offset-4 text-left">
             <label for="userId" class="form-label">Senha</label>
-            <input type="password" class="form-control" name="PassWord" id="PassWord" placeholder="Senha" />
+            <input type="password" class="form-control" name=Senha" id="Senha" placeholder="Senha" />
         </div>
     </div>
     <p>@ViewBag.Erro</p>
