--- a/NotfisUpload/Views/Login/RegistrarLogin.cshtml
+++ b/NotfisUpload/Views/Login/RegistrarLogin.cshtml
@@ -1,4 +1,4 @@
-﻿@model NotfisUpload.Entidade.Conta
+﻿@model NotfisUpload.Entidade.Usuario
 @{
     ViewBag.Title = "Index";
 }
@@ -36,4 +36,6 @@
     </div>
 
 </form>
+
+
 
