--- a/NotfisUpload/Views/Login/Login.cshtml
+++ b/NotfisUpload/Views/Login/Login.cshtml
@@ -1,4 +1,4 @@
-﻿@model NotfisUpload.Entidade.Usuario
+﻿@model NotfisUpload.Servicos.Login
 @{
     ViewBag.Title = "Index";
 }
@@ -19,7 +19,7 @@
     <div class="row">
         <div class="col-sm-4 col-sm-offset-4 text-left">
             <label for="userId" class="form-label">Senha</label>
-            <input type="password" class="form-control" name=Senha" id="Senha" placeholder="Senha" />
+            <input type="password" class="form-control" name="Senha" id="Senha" placeholder="Senha" />
         </div>
     </div>
     <p>@ViewBag.Erro</p>
