--- a/NotfisUpload/Views/Home/Monitoramento.cshtml
+++ b/NotfisUpload/Views/Home/Monitoramento.cshtml
@@ -1,4 +1,4 @@
-﻿@model IEnumerable<NotfisUpload.Entidade.Intercambio>
+﻿@model IEnumerable<NotfisUpload.Entidade.NotaFiscal>
 
 
 <br />
@@ -17,31 +17,28 @@
                     <input type="submit" class="btn btn-info btn-sm btn-block" value="Filtrar">
                 </div>
             </div>
+            <br />
+
             <table class="table table-striped">
                 <thead>
                     <tr>
-                        <th style="width: 30px;">#</th>
-                        <th style="width: 30px;">#</th>
-                        <th style="width: 200px;">Nome</th>
-                        <th style="width: 250px;">CNPJ</th>
-                        <th style="width: 100px;">Situação</th>
-                        <th style="width: 150px;">Inclusão</th>
-                        <th style="width: 30px;">Tipo</th>
+                        <th style="width: 30px;">Id</th>
+                        <th style="width: 30px;">Pedido</th>
+                        <th style="width: 200px;">Chave</th>
+                        <th style="width: 250px;">Natureza</th>
+                        <th style="width: 100px;">Emissao</th>
                     </tr>
                 </thead>
                 <tbody>
                     @foreach (var item in Model)
                     {
-                        <tr>
-                            <td>@Html.DisplayFor(modelitem => item.Id)</td>
-                            <td>@Html.DisplayFor(modelitem => item.CNPJ)</td>
-                            <td>@Html.DisplayFor(modelitem => item.Data)</td>
-                            <td>@Html.DisplayFor(modelitem => item.IE)</td>
-                            <td>@Html.DisplayFor(modelitem => item.NotasFiscais)</td>
-                            <td>@Html.DisplayFor(modelitem => item.Remetente)</td>
-                            <td>@Html.DisplayFor(modelitem => item.Destinatario)</td>
-
-                        </tr>
+                    <tr>
+                        <td>@Html.DisplayFor(modelitem => item.Id)</td>
+                        <td>@Html.DisplayFor(modelitem => item.Pedido)</td>
+                        <td>@Html.DisplayFor(modelitem => item.ChaveNFE)</td>
+                        <td>@Html.DisplayFor(modelitem => item.Natureza)</td>
+                        <td>@Html.DisplayFor(modelitem => item.DataDaEmissao)</td>
+                    </tr>
                     }
                 </tbody>
             </table>
