--- a/NotfisUpload/Views/Home/Monitoramento.cshtml
+++ b/NotfisUpload/Views/Home/Monitoramento.cshtml
@@ -2,23 +2,24 @@
 
 
 <br />
-<div class="panel panel-default">
-    <div class="panel-body">
-        <form class="form" method="get">
-            <div class="row">
-                <div class="col-sm-5 col-xs-12">
-                    <input type="text" class="form-control input-sm" placeholder="Pesquise por chaveNFE" id="ChaveNFE" name="ChaveNfe">
+<form asp-controller="Home" asp-action="Monitoramento" method="get">
+    <div class="panel panel-default">
+        <div class="panel-body">
+            <form class="form" method="get">
+                <div class="row">
+                    <div class="col-sm-5 col-xs-12">
+                        <input type="text" class="form-control input-sm" placeholder="Pesquise por chaveNFE" id="ChaveNFE" name="ChaveNfe">
+                    </div>
+                    <div class="col-sm-3 col-xs-12">
+                        <label class="sr-only">Nro. NF</label>
+                        <input type="text" class="form-control input-sm" placeholder="Pesquise por Pedido" id="Pedido" name="Pedido">
+                    </div>
+                    <div class="col-sm-3 col-xs-12">
+                        <input type="submit" class="btn btn-info btn-sm btn-block" value="Filtrar">
+                    </div>
                 </div>
-                <div class="col-sm-3 col-xs-12">
-                    <label class="sr-only">Nro. NF</label>
-                    <input type="text" class="form-control input-sm" placeholder="Pesquise por Pedido" id="Pedido" name="Pedido">
-                </div>
-                <div class="col-sm-3 col-xs-12">
-                    <input type="submit" class="btn btn-info btn-sm btn-block" value="Filtrar">
-                </div>
-            </div>
+            </form>
             <br />
-
             <table class="table table-striped">
                 <thead>
                     <tr>
@@ -32,18 +33,17 @@
                 <tbody>
                     @foreach (var item in Model)
                     {
-                    <tr>
-                        <td>@Html.DisplayFor(modelitem => item.Id)</td>
-                        <td>@Html.DisplayFor(modelitem => item.Pedido)</td>
-                        <td>@Html.DisplayFor(modelitem => item.ChaveNFE)</td>
-                        <td>@Html.DisplayFor(modelitem => item.Natureza)</td>
-                        <td>@Html.DisplayFor(modelitem => item.DataDaEmissao)</td>
-                    </tr>
+                        <tr>
+                            <td>@Html.DisplayFor(modelitem => item.Id)</td>
+                            <td>@Html.DisplayFor(modelitem => item.Pedido)</td>
+                            <td>@Html.DisplayFor(modelitem => item.ChaveNFE)</td>
+                            <td>@Html.DisplayFor(modelitem => item.Natureza)</td>
+                            <td>@Html.DisplayFor(modelitem => item.DataDaEmissao)</td>
+                        </tr>
                     }
                 </tbody>
             </table>
-
-        </form>
+        </div>
     </div>
-</div>
-<!-- Grid -->
+
+</form>
