--- a/NotfisUpload/Views/Login/CadastrarLogin.cshtml
+++ b/NotfisUpload/Views/Login/CadastrarLogin.cshtml
@@ -25,6 +25,27 @@
             </div>
         }
 
+        <script src="~/lib/jquery/dist/jquery.js"></script>
+        <script>
+            function configurarConsultaCep() {
+                $("input").change(function () {
+                    var cep_code = $(this).val();
+                    if (cep_code.length <= 0) return;
+                    $.get("http://apps.widenet.com.br/busca-cep/api/cep.json", { code: cep_code }, function (result) {
+                        if (result.status != 1) {
+                            alert(result.message || "Houve um erro desconhecido");
+                            return;
+                        }
+                        $("input[name='Cep']").val(result.code);
+                        $("input[name='Estado']").val(result.state);
+                        $("input[name='Cidade']").val(result.city);
+                        $("“input[name ='Bairro']").val(result.district);
+                        $("input [name='Endereco']").val(result.address);
+                    });
+                });
+            });
+        </script>
+
         @{
             if (ViewBag.Endereco != null)
             {
@@ -174,6 +195,9 @@
 
 
 
+
+
+
     @*@model IEnumerable<_Views_Login_Login.Entidade.usario>
 
 @{
@@ -235,52 +259,51 @@
 
 
 
+@**<script src="~/lib/jquery/dist/jquery.js"></script>
+<script>
 
-@*<script src="~/lib/jquery/dist/jquery.js"></script>
-    <script>
 
-
-        function configurarConsultaCep() {
-            $("input").change(function () {
-                var cep_code = $(this).val();
-                if (cep_code.length <= 0) return;
-                $.get("http://apps.widenet.com.br/busca-cep/api/cep.json", { code: cep_code }, function (result) {
-                    if (result.status != 1) {
-                        alert(result.message || "Houve um erro desconhecido");
-                        return;
-                    }
-                    $("input[name='Cep']").val(result.code);
-                    $("input[name='Estado']").val(result.state);
-                    $("input[name='Cidade']").val(result.city);
-                    $("“input[name ='Bairro']").val(result.district);
-                    $("input [name='Endereco']").val(result.address);
-                });
+    function configurarConsultaCep() {
+        $("input").change(function () {
+            var cep_code = $(this).val();
+            if (cep_code.length <= 0) return;
+            $.get("http://apps.widenet.com.br/busca-cep/api/cep.json", { code: cep_code }, function (result) {
+                if (result.status != 1) {
+                    alert(result.message || "Houve um erro desconhecido");
+                    return;
+                }
+                $("input[name='Cep']").val(result.code);
+                $("input[name='Estado']").val(result.state);
+                $("input[name='Cidade']").val(result.city);
+                $("“input[name ='Bairro']").val(result.district);
+                $("input [name='Endereco']").val(result.address);
             });
         });
+    });*@
 
-            //$(document).ready(function () {
-            //    configurarConsultaCep();
-            //});
+        <!--//$(document).ready(function () {
+        //    configurarConsultaCep();
+        //});
 
-            //$(document).ready(function () {
-            //    alert("Test");
-            //});
-            //jQuery(function ($) {
-            //    $("input[name='Cep']").change(function () {
-            //        var cep_code = $(this).val();
-            //        if (cep_code.length <= 0) return;
-            //        $.get("http://apps.widenet.com.br/busca-cep/api/cep.json", { code: cep_code }, function (result) {
-            //            if (result.status != 1) {
-            //                alert(result.message || "Houve um erro desconhecido");
-            //                return;
-            //            }
-            //            $("input[name='Cep']").val(result.code);
-            //            $("input[name='Estado']").val(result.state);
-            //            $("input[name='Cidade']").val(result.city);
-            //            $("“input[name ='Bairro']").val(result.district);
-            //            $("input [name='Endereco']").val(result.address);
-            //        });
-            //    });
-            //});
-    </script>*@
+        //$(document).ready(function () {
+        //    alert("Test");
+        //});
+        //jQuery(function ($) {
+        //    $("input[name='Cep']").change(function () {
+        //        var cep_code = $(this).val();
+        //        if (cep_code.length <= 0) return;
+        //        $.get("http://apps.widenet.com.br/busca-cep/api/cep.json", { code: cep_code }, function (result) {
+        //            if (result.status != 1) {
+        //                alert(result.message || "Houve um erro desconhecido");
+        //                return;
+        //            }
+        //            $("input[name='Cep']").val(result.code);
+        //            $("input[name='Estado']").val(result.state);
+        //            $("input[name='Cidade']").val(result.city);
+        //            $("“input[name ='Bairro']").val(result.district);
+        //            $("input [name='Endereco']").val(result.address);
+        //        });
+        //    });
+        //});
+</script>-->
 
